syntax = "proto3";
option  optimize_for = CODE_SIZE;
option  go_package = ".;proto";

message EchoRequest 
{
  string text = 1;
}

message EchoResponse 
{
  string text = 1;
}

message HelloResponse 
{
  string text = 1;
}

message AddRequest
{
  int32 a = 1;
  int32 b = 2;
}

message AddResponse
{
  int32 sum = 1;
}

message TestSignal 
{
  string text = 1;
}

message TestEvent
{
  string text = 1;
}
